Fix width of event banner and alignment of the links

--- a/src/pages/search/event/EventBanner.less
+++ b/src/pages/search/event/EventBanner.less
@@ -4,6 +4,10 @@
     border: 4px solid @secondaryTurquoise;
     padding: 1.5rem 1rem;
     position: relative;
+
+    @media (min-width: @screen-md-min) {
+        width: 320px;
+    }
 }
 
 .EventBanner--illustration {
@@ -26,12 +30,10 @@
 
 .EventBanner--event-title-link {
     margin: 0.5rem calc(1rem + 49px) 0 0;
-    display: inline-block;
     line-height: 1.5rem;
 }
 
 .EventBanner--events-info-link {
     margin-top: 1rem;
-    display: inline-block;
     line-height: 1.5rem;
 }
